add swagger bearer authentication. expand existed endpoints documentation
